--- a/src/Skills.css
+++ b/src/Skills.css
@@ -6,6 +6,7 @@
   display: flex;
   justify-content: space-around;
   margin-bottom: 20px;
+  gap: 40px;
   background-color: #f0f0f0;
   border-radius: 20px;
   overflow: hidden;
@@ -16,7 +17,7 @@
 
 .tab {
   flex: 1; /* Ensure equal width for all tabs */
-  padding: 10px;
+  padding: 8px 16px;
   border: none;
   background-color: transparent;
   cursor: pointer;
@@ -24,10 +25,12 @@
   align-self: center; /* Center the text */
   width: 110px;
   height: 50px;
+  font-size: 1rem; /* Ensure font size for better readability */
 }
 
 .tab.active {
-  color: white;
+  color: yellowgreen; /* Change text color to black when active */
+  font-weight: bold; /* Optional: make the text bold for active tab */
 }
 
 .tab:not(.active):hover {
@@ -37,7 +40,7 @@
 .active-tab-indicator {
   position: absolute;
   height: 80%;
-  background-color: #007bff;
+
   transition: left 0.3s ease, width 0.3s ease; /* Smooth transition for left and width */
   border-radius: 20px;
   cursor: pointer;
@@ -84,4 +87,40 @@
 .label {
   margin-top: 10px;
   font-size: 0.8rem;
+}
+
+.category-layout {
+  text-align: center;
+  margin: 20px 0;
+}
+
+.category-name {
+  font-size: 1.5em;
+  margin-bottom: 10px;
+}
+
+.skills-row {
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-start;
+}
+
+.skills-column {
+  flex: 1;
+}
+
+.skills-column.left {
+  text-align: left;
+}
+
+.skills-column.center {
+  text-align: center;
+}
+
+.skills-column.right {
+  text-align: right;
+}
+
+.card {
+  margin: 10px;
 }
